# MemoryCore

./: ARCHITECTURE.md  DESIGN_DECISIONS.md  README.md  pyproject.toml  requirements.txt
docs/: GETTING_STARTED.md  USAGE.md
examples/: basic_usage.py
src/memorycore/: __init__.py  factory.py  server.py
src/memorycore/config/: __init__.py  settings.py
src/memorycore/core/: __init__.py  memory.py  memory_manager.py
src/memorycore/embedding/: __init__.py  base.py  chromadb_embedding.py
src/memorycore/events/: __init__.py  base.py  memory_events.py
src/memorycore/exceptions/: __init__.py  base.py  embedding.py  storage.py  validation.py
src/memorycore/observability/: __init__.py  health.py  logging.py  metrics.py
src/memorycore/storage/: __init__.py  base.py  chromadb_backend.py  memory_backend.py
tests/: __init__.py  test_memory_manager.py
